--- a/src/components/uiComponents/文件夹解释文件.md
+++ b/src/components/uiComponents/文件夹解释文件.md
@@ -4,6 +4,6 @@
 ----
 |   文件名   |业务逻辑、针对的功能|备注|
 |:-:|:-|:-|
-||||
+|tabIconApp.vue|app底部tab切换栏组件|将底部按钮单独封装，方便日后对按钮进行扩展|
 ||||
 |    文件提示.md   |    文件夹针对解释，方便读者能够准确且更快地找到自己想看到的功能文件     |       我觉得多这么一个文件，尽管对于个人开发没有什么重要的作用但是对于团队开发的项目来说，我觉得规范的文件布局更有利于项目功能的开发，同时也能更有利于针对功能的维护以及提高编程人员的代码质量。|
