完善文件笔记，做好每个文件夹得笔记，养成良好的编码习惯，我觉得对于一个程序员来说是至关重要的

--- a/src/views/page/mainPages/文件夹解释文件.md
+++ b/src/views/page/mainPages/文件夹解释文件.md
@@ -2,8 +2,8 @@
 - 用来描述当前文件夹中的文件，有什么作用，怎么使用；
 
 ----
-|   文件名   |业务逻辑、针对的功能|备注|
-|:-:|:-|:-|
-|tabIconApp.vue|app底部tab切换栏组件|将底部按钮单独封装，方便日后对按钮进行扩展|
+|   文件名   |业务逻辑、针对的功能|备注|目标|
+|:-:|:-|:-|:-|
+|discoverPage.vue|底部发现按钮页面组件|page组件||
 ||||
-|    文件提示.md   |    文件夹针对解释，方便读者能够准确且更快地找到自己想看到的功能文件     |       我觉得多这么一个文件，尽管对于个人开发没有什么重要的作用但是对于团队开发的项目来说，我觉得规范的文件布局更有利于项目功能的开发，同时也能更有利于针对功能的维护以及提高编程人员的代码质量。|
+|    文件提示.md   |    文件夹针对解释，方便读者能够准确且更快地找到自己想看到的功能文件     |       我觉得多这么一个文件，尽管对于个人开发没有什么重要的作用但是对于团队开发的项目来说，我觉得规范的文件布局更有利于项目功能的开发，同时也能更有利于针对功能的维护以及提高编程人员的代码质量。||
